--- a/results/colored_dbn/colored_dbn_L.tex
+++ b/results/colored_dbn/colored_dbn_L.tex
@@ -3,12 +3,24 @@
 \usepackage{tikz}
 \begin{document}
 \begin{tikzpicture}
-\filldraw[fill=lime,rounded corners]  (-0.2,-0.5) rectangle (4.2,+0.5);
-\filldraw[fill=lime,rounded corners]  (14.8,-0.5) rectangle (19.2,+0.5);
-\filldraw[fill=pink,rounded corners]  (4.8,-0.5) rectangle (9.2,+0.5);
-\filldraw[fill=pink,rounded corners]  (19.8,-0.5) rectangle (24.2,+0.5);
-\filldraw[fill=cyan,rounded corners]  (9.8,-0.5) rectangle (14.2,+0.5);
-\filldraw[fill=cyan,rounded corners]  (24.8,-0.5) rectangle (29.2,+0.5);
+\definecolor{c0}{rgb}{0.5529411764705883, 0.8274509803921568, 0.7803921568627451}
+\definecolor{c1}{rgb}{1.0, 1.0, 0.7019607843137254}
+\definecolor{c2}{rgb}{0.7450980392156863, 0.7294117647058823, 0.8549019607843137}
+\definecolor{c3}{rgb}{0.984313725490196, 0.5019607843137255, 0.4470588235294118}
+\definecolor{c4}{rgb}{0.5019607843137255, 0.6941176470588235, 0.8274509803921568}
+\definecolor{c5}{rgb}{0.9921568627450981, 0.7058823529411765, 0.3843137254901961}
+\definecolor{c6}{rgb}{0.7019607843137254, 0.8705882352941177, 0.4117647058823529}
+\definecolor{c7}{rgb}{0.9882352941176471, 0.803921568627451, 0.8980392156862745}
+\definecolor{c8}{rgb}{0.8509803921568627, 0.8509803921568627, 0.8509803921568627}
+\definecolor{c9}{rgb}{0.7372549019607844, 0.5019607843137255, 0.7411764705882353}
+\definecolor{c10}{rgb}{0.8, 0.9215686274509803, 0.7725490196078432}
+\definecolor{c11}{rgb}{1.0, 0.9294117647058824, 0.43529411764705883}
+\filldraw[fill=c0,rounded corners]  (-0.2,-0.5) rectangle (4.2,+0.5);
+\filldraw[fill=c0,rounded corners]  (14.8,-0.5) rectangle (19.2,+0.5);
+\filldraw[fill=c1,rounded corners]  (4.8,-0.5) rectangle (9.2,+0.5);
+\filldraw[fill=c1,rounded corners]  (19.8,-0.5) rectangle (24.2,+0.5);
+\filldraw[fill=c2,rounded corners]  (9.8,-0.5) rectangle (14.2,+0.5);
+\filldraw[fill=c2,rounded corners]  (24.8,-0.5) rectangle (29.2,+0.5);
 \fill (0,0) circle (0.2) node[below=.5cm] {\textbf{1}};
 \fill (1,0) circle (0.2) node[below=.5cm] {\textbf{2}};
 \fill (2,0) circle (0.2) node[below=.5cm] {\textbf{3}};
@@ -39,6 +51,18 @@
 \fill (27,0) circle (0.2) node[below=.5cm] {\textbf{28}};
 \fill (28,0) circle (0.2) node[below=.5cm] {\textbf{29}};
 \fill (29,0) circle (0.2) node[below=.5cm] {\textbf{30}};
+\fill (0,0) circle (0.2) node[below=1cm] {\textbf{a}};
+\fill (4,0) circle (0.2) node[below=1cm] {\textbf{b}};
+\fill (5,0) circle (0.2) node[below=1cm] {\textbf{c}};
+\fill (9,0) circle (0.2) node[below=1cm] {\textbf{d}};
+\fill (10,0) circle (0.2) node[below=1cm] {\textbf{e}};
+\fill (14,0) circle (0.2) node[below=1cm] {\textbf{f}};
+\fill (15,0) circle (0.2) node[below=1cm] {\textbf{g}};
+\fill (19,0) circle (0.2) node[below=1cm] {\textbf{h}};
+\fill (20,0) circle (0.2) node[below=1cm] {\textbf{i}};
+\fill (24,0) circle (0.2) node[below=1cm] {\textbf{j}};
+\fill (25,0) circle (0.2) node[below=1cm] {\textbf{k}};
+\fill (29,0) circle (0.2) node[below=1cm] {\textbf{l}};
 \draw[thick] (0,0) -- (1,0);
 \draw[thick] (1,0) -- (2,0);
 \draw[thick] (2,0) -- (3,0);
