--- a/results/latex_equations/H_latex_equations.tex
+++ b/results/latex_equations/H_latex_equations.tex
@@ -23,5 +23,5 @@
 \end{figure}
 \end{center}
 first and last anchors, already given: $ a , e $
-$$ A =\min_{ b,c,d } \left( \colorbox{c1}{$C_{\boxtimes}$}\left[b,c-1,d,e-1\right]+\colorbox{c0}{$C_{\boxtimes}$}\left[a,b-1,c,d-1\right]\right) $$
+$$ A =\min_{ a,b,c,d,e } \left( \colorbox{c1}{$C_{\boxtimes}$}\left[b,c-1,d,e-1\right]+\colorbox{c0}{$C_{\boxtimes}$}\left[a,b-1,c,d-1\right]\right) $$
 \end{document}
