--- a/results/latex_equations/K4_latex_equations.tex
+++ b/results/latex_equations/K4_latex_equations.tex
@@ -23,7 +23,7 @@
 \end{figure}
 \end{center}
 first and last anchors, already given: $ a , i $
-$$ A =\min_{ d,e,h } \left( B\left[a,d,e,h\right]+\colorbox{c3}{$C_{\boxtimes}$}\left[d,e-1,h,i-1\right]\right) $$
+$$ A =\min_{ a,d,e,h,i } \left( B\left[a,d,e,h\right]+\colorbox{c3}{$C_{\boxtimes}$}\left[d,e-1,h,i-1\right]\right) $$
 $$ B\left[ a,d,e,h \right] =\min_{ c,g } \left( C\left[a,c,e,g\right]+\colorbox{c2}{$C_{\boxtimes}$}\left[c,d-1,g,h-1\right]\right) $$
 $$ C\left[ a,c,e,g \right] =\min_{ b,f } \left( \colorbox{c1}{$C_{\boxtimes}$}\left[b,c-1,f,g-1\right]+\colorbox{c0}{$C_{\boxtimes}$}\left[a,b-1,e,f-1\right]\right) $$
 \end{document}
