--- a/results/latex_equations/K5_latex_equations.tex
+++ b/results/latex_equations/K5_latex_equations.tex
@@ -23,7 +23,7 @@
 \end{figure}
 \end{center}
 first and last anchors, already given: $ a , k $
-$$ A =\min_{ e,f,j } \left( B\left[a,e,f,j\right]+\colorbox{c4}{$C_{\boxtimes}$}\left[e,f-1,j,k-1\right]\right) $$
+$$ A =\min_{ a,e,f,j,k } \left( B\left[a,e,f,j\right]+\colorbox{c4}{$C_{\boxtimes}$}\left[e,f-1,j,k-1\right]\right) $$
 $$ B\left[ a,e,f,j \right] =\min_{ d,i } \left( C\left[a,d,f,i\right]+\colorbox{c3}{$C_{\boxtimes}$}\left[d,e-1,i,j-1\right]\right) $$
 $$ C\left[ a,d,f,i \right] =\min_{ b,g } \left( D\left[b,d,g,i\right]+\colorbox{c0}{$C_{\boxtimes}$}\left[a,b-1,f,g-1\right]\right) $$
 $$ D\left[ b,d,g,i \right] =\min_{ c,h } \left( \colorbox{c2}{$C_{\boxtimes}$}\left[c,d-1,h,i-1\right]+\colorbox{c1}{$C_{\boxtimes}$}\left[b,c-1,g,h-1\right]\right) $$
