--- a/results/latex_equations/L_latex_equations.tex
+++ b/results/latex_equations/L_latex_equations.tex
@@ -23,6 +23,6 @@
 \end{figure}
 \end{center}
 first and last anchors, already given: $ a , g $
-$$ A =\min_{ c,d,f } \left( B\left[a,c,d,f\right]+\colorbox{c2}{$C_{\boxtimes}$}\left[c,d-1,f,g-1\right]\right) $$
+$$ A =\min_{ a,c,d,f,g } \left( B\left[a,c,d,f\right]+\colorbox{c2}{$C_{\boxtimes}$}\left[c,d-1,f,g-1\right]\right) $$
 $$ B\left[ a,c,d,f \right] =\min_{ b,e } \left( \colorbox{c1}{$C_{\boxtimes}$}\left[b,c-1,e,f-1\right]+\colorbox{c0}{$C_{\boxtimes}$}\left[a,b-1,d,e-1\right]\right) $$
 \end{document}
