--- a/results/latex_equations/M_latex_equations.tex
+++ b/results/latex_equations/M_latex_equations.tex
@@ -23,7 +23,7 @@
 \end{figure}
 \end{center}
 first and last anchors, already given: $ a , i $
-$$ A =\min_{ e,f,h } \left( B\left[a,e,f,h\right]+\colorbox{c3}{$C_{\boxtimes}$}\left[e,f-1,h,i-1\right]\right) $$
+$$ A =\min_{ a,e,f,h,i } \left( B\left[a,e,f,h\right]+\colorbox{c3}{$C_{\boxtimes}$}\left[e,f-1,h,i-1\right]\right) $$
 $$ B\left[ a,e,f,h \right] =\min_{ b,d } \left( \colorbox{c0}{$C_{\boxtimes}$}\left[a,b-1,d,e-1\right]+C\left[b,d,f,h\right]\right) $$
 $$ C\left[ b,d,f,h \right] =\min_{ c,g } \left( \colorbox{c2}{$C_{\boxtimes}$}\left[c,d-1,g,h-1\right]+\colorbox{c1}{$C_{\boxtimes}$}\left[b,c-1,f,g-1\right]\right) $$
 \end{document}
