--- a/results/colored_dbn/colored_dbn_C5.tex
+++ b/results/colored_dbn/colored_dbn_C5.tex
@@ -3,7 +3,6 @@
 \usepackage{tikz}
 \usepackage{relsize}
 \begin{document}
-\begin{tikzpicture}
 \definecolor{c0}{rgb}{0.5529411764705883, 0.8274509803921568, 0.7803921568627451}
 \definecolor{c1}{rgb}{1.0, 1.0, 0.7019607843137254}
 \definecolor{c2}{rgb}{0.7450980392156863, 0.7294117647058823, 0.8549019607843137}
@@ -16,27 +15,18 @@
 \definecolor{c9}{rgb}{0.7372549019607844, 0.5019607843137255, 0.7411764705882353}
 \definecolor{c10}{rgb}{0.8, 0.9215686274509803, 0.7725490196078432}
 \definecolor{c11}{rgb}{1.0, 0.9294117647058824, 0.43529411764705883}
-\filldraw[fill=c0,rounded corners]  (-0.2,-0.5) rectangle (1.2,+0.5);
-\filldraw[fill=c0,rounded corners]  (1.8,-0.5) rectangle (3.2,+0.5);
-\filldraw[fill=c1,rounded corners]  (0.8,-0.5) rectangle (1.2,+0.5);
-\filldraw[fill=c1,rounded corners]  (7.8,-0.5) rectangle (8.2,+0.5);
-\filldraw[fill=c2,rounded corners]  (1.8,-0.5) rectangle (3.2,+0.5);
-\filldraw[fill=c2,rounded corners]  (3.8,-0.5) rectangle (5.2,+0.5);
-\filldraw[fill=c3,rounded corners]  (3.8,-0.5) rectangle (5.2,+0.5);
-\filldraw[fill=c3,rounded corners]  (5.8,-0.5) rectangle (7.2,+0.5);
-\filldraw[fill=c4,rounded corners]  (5.8,-0.5) rectangle (7.2,+0.5);
-\filldraw[fill=c4,rounded corners]  (7.8,-0.5) rectangle (9.2,+0.5);
+\begin{tikzpicture}
 \fill (0,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{a}}};
-\fill (0.5,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{b}}};
-\fill (1.5,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{c}}};
-\fill (2.5,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{d}}};
-\fill (3.5,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{e}}};
-\fill (4.5,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{f}}};
-\fill (5.5,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{g}}};
-\fill (6.5,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{h}}};
-\fill (7.5,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{i}}};
-\fill (8.5,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{j}}};
-\fill (9,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{k}}};
+\fill (4,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{b}}};
+\fill (8,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{c}}};
+\fill (12,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{d}}};
+\fill (16,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{e}}};
+\fill (20,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{f}}};
+\fill (24,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{g}}};
+\fill (28,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{h}}};
+\fill (32,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{i}}};
+\fill (36,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{j}}};
+\fill (40,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{k}}};
 \draw[thick] (0,0) -- (1,0);
 \draw[thick] (1,0) -- (2,0);
 \draw[thick] (2,0) -- (3,0);
@@ -46,20 +36,71 @@
 \draw[thick] (6,0) -- (7,0);
 \draw[thick] (7,0) -- (8,0);
 \draw[thick] (8,0) -- (9,0);
-\draw[very thick] (7,0) arc                 (0:180:1.5);
-\draw[very thick] (9,0) arc                 (0:180:1.5);
-\draw[very thick] (3,0) arc                 (0:180:1.5);
-\draw[very thick] (8,0) arc                 (0:180:3.5);
-\draw[very thick] (5,0) arc                 (0:180:1.5);
-\filldraw[fill=c0,rounded corners]  (-0.2,-0.5) rectangle (1.2,+0.5);
-\filldraw[fill=c0,rounded corners]  (1.8,-0.5) rectangle (3.2,+0.5);
-\filldraw[fill=c1,rounded corners]  (0.8,-0.5) rectangle (1.2,+0.5);
-\filldraw[fill=c1,rounded corners]  (7.8,-0.5) rectangle (8.2,+0.5);
-\filldraw[fill=c2,rounded corners]  (1.8,-0.5) rectangle (3.2,+0.5);
-\filldraw[fill=c2,rounded corners]  (3.8,-0.5) rectangle (5.2,+0.5);
-\filldraw[fill=c3,rounded corners]  (3.8,-0.5) rectangle (5.2,+0.5);
-\filldraw[fill=c3,rounded corners]  (5.8,-0.5) rectangle (7.2,+0.5);
-\filldraw[fill=c4,rounded corners]  (5.8,-0.5) rectangle (7.2,+0.5);
-\filldraw[fill=c4,rounded corners]  (7.8,-0.5) rectangle (9.2,+0.5);
+\draw[thick] (9,0) -- (10,0);
+\draw[thick] (10,0) -- (11,0);
+\draw[thick] (11,0) -- (12,0);
+\draw[thick] (12,0) -- (13,0);
+\draw[thick] (13,0) -- (14,0);
+\draw[thick] (14,0) -- (15,0);
+\draw[thick] (15,0) -- (16,0);
+\draw[thick] (16,0) -- (17,0);
+\draw[thick] (17,0) -- (18,0);
+\draw[thick] (18,0) -- (19,0);
+\draw[thick] (19,0) -- (20,0);
+\draw[thick] (20,0) -- (21,0);
+\draw[thick] (21,0) -- (22,0);
+\draw[thick] (22,0) -- (23,0);
+\draw[thick] (23,0) -- (24,0);
+\draw[thick] (24,0) -- (25,0);
+\draw[thick] (25,0) -- (26,0);
+\draw[thick] (26,0) -- (27,0);
+\draw[thick] (27,0) -- (28,0);
+\draw[thick] (28,0) -- (29,0);
+\draw[thick] (29,0) -- (30,0);
+\draw[thick] (30,0) -- (31,0);
+\draw[thick] (31,0) -- (32,0);
+\draw[thick] (32,0) -- (33,0);
+\draw[thick] (33,0) -- (34,0);
+\draw[thick] (34,0) -- (35,0);
+\draw[thick] (35,0) -- (36,0);
+\draw[thick] (36,0) -- (37,0);
+\draw[thick] (37,0) -- (38,0);
+\draw[thick] (38,0) -- (39,0);
+\draw[very thick] (40,0) arc                 (0:180:8.0);
+\draw[very thick] (34,0) arc                 (0:180:14.0);
+\draw[very thick] (12,0) arc                 (0:180:4.0);
+\draw[very thick] (31,0) arc                 (0:180:7.0);
+\draw[very thick] (21,0) arc                 (0:180:5.0);
+\draw[very thick] (35,0) arc                 (0:180:15.0);
+\draw[very thick] (22,0) arc                 (0:180:6.0);
+\draw[very thick] (36,0) arc                 (0:180:16.0);
+\draw[very thick] (32,0) arc                 (0:180:8.0);
+\draw[very thick] (23,0) arc                 (0:180:7.0);
+\draw[very thick] (13,0) arc                 (0:180:5.0);
+\draw[very thick] (36,0) arc                 (0:180:4.0);
+\draw[very thick] (14,0) arc                 (0:180:6.0);
+\draw[very thick] (15,0) arc                 (0:180:7.0);
+\draw[very thick] (38,0) arc                 (0:180:6.0);
+\draw[very thick] (24,0) arc                 (0:180:8.0);
+\draw[very thick] (37,0) arc                 (0:180:5.0);
+\draw[very thick] (16,0) arc                 (0:180:8.0);
+\draw[very thick] (40,0) arc                 (0:180:20.0);
+\draw[very thick] (39,0) arc                 (0:180:7.0);
+\draw[very thick] (29,0) arc                 (0:180:5.0);
+\draw[very thick] (28,0) arc                 (0:180:4.0);
+\draw[very thick] (32,0) arc                 (0:180:12.0);
+\draw[very thick] (30,0) arc                 (0:180:6.0);
+\draw[very thick] (20,0) arc                 (0:180:4.0);
+\draw[very thick] (33,0) arc                 (0:180:13.0);
+\filldraw[fill=c0,rounded corners]  (23.8,-0.5) rectangle (28.2,+0.5);
+\filldraw[fill=c0,rounded corners]  (35.8,-0.5) rectangle (40.2,+0.5);
+\filldraw[fill=c1,rounded corners]  (7.8,-0.5) rectangle (12.2,+0.5);
+\filldraw[fill=c1,rounded corners]  (19.8,-0.5) rectangle (24.2,+0.5);
+\filldraw[fill=c2,rounded corners]  (3.8,-0.5) rectangle (8.2,+0.5);
+\filldraw[fill=c2,rounded corners]  (31.8,-0.5) rectangle (36.2,+0.5);
+\filldraw[fill=c3,rounded corners]  (15.8,-0.5) rectangle (20.2,+0.5);
+\filldraw[fill=c3,rounded corners]  (27.8,-0.5) rectangle (32.2,+0.5);
+\filldraw[fill=c4,rounded corners]  (-0.2,-0.5) rectangle (4.2,+0.5);
+\filldraw[fill=c4,rounded corners]  (11.8,-0.5) rectangle (16.2,+0.5);
 \end{tikzpicture}
 \end{document}
