--- a/results/latex_equations/K_latex_equations.tex
+++ b/results/latex_equations/K_latex_equations.tex
@@ -22,10 +22,10 @@
 \includegraphics[width=\textwidth]{results/colored_dbn/colored_dbn_K.pdf}
 \end{figure}
 \end{center}
-first and last anchors, already given: $ a , h $
-$$ A =\min_{  } \left( B\left[\right]\right) $$
-$$ B =\min_{ a,c,d,f,h } \left( \colorbox{c1}{$D$}\left[a,f|c,d\right]+C\left[c,d,f,h\right]\right) $$
-$$ C\left[ c,d,f,h \right] =\min_{ g } \left( \colorbox{c0}{$C_{\boxtimes}$}\left[c,d-1,g,h-1\right]\right) $$
-$$ \colorbox{c1}{$D$}' \left[a,f | c,d \right] =  \min\begin{cases}\colorbox{c1}{$D$}'[ a+1 , f|c,d ], &\text{if } a+1 \notin\{ f , c,d \} \\\colorbox{c1}{$D$}[ a+1 , f-1|c,d ]+\Delta G(a,f) &\text{if } \{ a+1 , f-1 \}\cap \{ c,d \}=\emptyset\end{cases}$$
-$$ \colorbox{c1}{$D$} \left[a,f | c,d \right] =  \min\begin{cases}\colorbox{c1}{$D$}[ a , f-1|c,d ], &\text{if } f-1 ,\notin\{ a , c,d \} \\\colorbox{c1}{$D$}'[ a+1 , f|c,d ], &\text{if } a+1 \notin\{ f , c,d \} \\\colorbox{c1}{$D$}[ a+1 , f-1|c,d ]+\Delta G(a,f) &\text{if } \{ a+1 , f-1 \}\cap \{ c,d \}=\emptyset\end{cases}$$
+first and last anchors, already given: $ a , g $
+$$ A =\min_{ d } \left( \colorbox{c0}{$B$}[d,g|d,a]\right) $$
+$$ \colorbox{c0}{$B$}' \left[d,g | d',a \right] =  \min\begin{cases}\colorbox{c0}{$B$}'[ d , g-1|d',a ], &\text{if } g-1 ,\notin\{ d , d',a \} \\\colorbox{c0}{$B$}[ d+1 , g-1|d',a ]+\Delta G(d,g) &\text{if } \{ d+1 , g-1 \}\cap \{ d',a \}=\emptyset\end{cases}$$
+$$ \colorbox{c0}{$B$} \left[d,g | d',a \right] =  \min\begin{cases}\colorbox{c0}{$B$}[ d+1 , g|d',a ], &\text{if } d+1 \notin\{ g , d',a \} \\\colorbox{c0}{$B$}'[ d , g-1|d',a ], &\text{if } g-1 ,\notin\{ d , d',a \} \\\colorbox{c0}{$B$}[ d+1 , g-1|d',a ]+\Delta G(d,g) &\text{if } \{ d+1 , g-1 \}\cap \{ d',a \}=\emptyset,\\\colorbox{c1}{$C$}[d',a|13,25]\end{cases}$$
+$$ \colorbox{c1}{$C$}' \left[d,a | e,f \right] =  \min\begin{cases}\colorbox{c1}{$C$}'[ d+1 , a|e,f ], &\text{if } d+1 \notin\{ a , e,f \} \\\end{cases}$$
+$$ \colorbox{c1}{$C$} \left[d,a | e,f \right] =  \min\begin{cases}\colorbox{c1}{$C$}[ d , a-1|e,f ], &\text{if } a-1 ,\notin\{ d , e,f \} \\\colorbox{c1}{$C$}'[ d+1 , a|e,f ], &\text{if } d+1 \notin\{ a , e,f \} \\\colorbox{c1}{$C$}[ d+1 , a-1|e,f ]+\Delta G(d,a) &\text{if } \{ d+1 , a-1 \}\cap \{ e,f \}=\emptyset,\\\colorbox{c2}{$C_{\boxtimes}$}[1,13,e,f]\end{cases}$$
 \end{document}
