--- a/results/latex_equations/L_latex_equations.tex
+++ b/results/latex_equations/L_latex_equations.tex
@@ -22,13 +22,7 @@
 \includegraphics[width=\textwidth]{results/colored_dbn/colored_dbn_L.pdf}
 \end{figure}
 \end{center}
-first and last anchors, already given: $ a , l $
-$$ A =\min_{  } \left( B\left[\right]\right) $$
-$$ B =\min_{ a,b,d,g,h,k } \left( F\left[a,d,g,k\right]+C\left[b,d,h,k\right]+\colorbox{c2}{$C_{\boxtimes}$}\left[a,b-1,g,h-1\right]\right) $$
-$$ C\left[ b,d,h,k \right] =\min_{ c } \left( D\left[c,d,h,k\right]\right) $$
-$$ D\left[ c,d,h,k \right] =\min_{ j } \left( E\left[c,d,h,j\right]\right) $$
-$$ E\left[ c,d,h,j \right] =\min_{ i } \left( \colorbox{c0}{$C_{\boxtimes}$}\left[c,d-1,i,j-1\right]\right) $$
-$$ F\left[ a,d,g,k \right] =\min_{ f } \left( G\left[a,d,f,k\right]\right) $$
-$$ G\left[ a,d,f,k \right] =\min_{ l } \left( H\left[d,f,k,l\right]\right) $$
-$$ H\left[ d,f,k,l \right] =\min_{ e } \left( \colorbox{c1}{$C_{\boxtimes}$}\left[e,f-1,k,l-1\right]\right) $$
+first and last anchors, already given: $ a , g $
+$$ A =\min_{ b,c,d,e,f } \left( \colorbox{c2}{$C_{\boxtimes}$}[a,b,d,e]+B[f,d,c,a]+\colorbox{c1}{$C_{\boxtimes}$}[b,c,e,f]\right) $$
+$$ B\left[ a,c,d,f \right] =\min_{  } \left( \colorbox{c0}{$C_{\boxtimes}$}[c,d,f,g]\right) $$
 \end{document}
