setup py and starting to work on c code generatio

--- a/results/latex_equations/K5_latex_equations.tex
+++ b/results/latex_equations/K5_latex_equations.tex
@@ -23,8 +23,8 @@
 \end{figure}
 \end{center}
 first and last anchors, already given: $ a , k $
-$$ A =\min_{ b,d,f,g,i } \left( B[d,f,a,i]+\colorbox{c4}{$C_{\boxtimes}$}[a,b,f,g]+D[d,g,i,b]\right) $$
-$$ B\left[ a,d,f,i \right] =\min_{ e,j } \left( \colorbox{c3}{$C_{\boxtimes}$}[d,e,i,j]+C[f,j,e,a]\right) $$
+$$ A =\min_{ b,d,f,g,i } \left( B[f,d,i,a]+\colorbox{c4}{$C_{\boxtimes}$}[a,b,f,g]+D[g,b,i,d]\right) $$
+$$ B\left[ a,d,f,i \right] =\min_{ e,j } \left( \colorbox{c3}{$C_{\boxtimes}$}[d,e,i,j]+C[f,a,e,j]\right) $$
 $$ C\left[ a,e,f,j \right] =\min_{  } \left( \colorbox{c2}{$C_{\boxtimes}$}[e,f,j,k]\right) $$
 $$ D\left[ b,d,g,i \right] =\min_{ c,h } \left( \colorbox{c0}{$C_{\boxtimes}$}[b,c,g,h]+\colorbox{c1}{$C_{\boxtimes}$}[c,d,h,i]\right) $$
 \end{document}
