--- a/results/latex_equations/L_latex_equations.tex
+++ b/results/latex_equations/L_latex_equations.tex
@@ -23,6 +23,6 @@
 \end{figure}
 \end{center}
 first and last anchors, already given: $ a , g $
-$$ A =\min_{ b,c,d,e,f } \left( \colorbox{c2}{$C_{\boxtimes}$}[a,b,d,e]+B[f,d,c,a]+\colorbox{c1}{$C_{\boxtimes}$}[b,c,e,f]\right) $$
+$$ A =\min_{ b,c,d,e,f } \left( \colorbox{c2}{$C_{\boxtimes}$}[a,b,d,e]+B[d,a,f,c]+\colorbox{c1}{$C_{\boxtimes}$}[b,c,e,f]\right) $$
 $$ B\left[ a,c,d,f \right] =\min_{  } \left( \colorbox{c0}{$C_{\boxtimes}$}[c,d,f,g]\right) $$
 \end{document}
