--- a/results/latex_equations/C5_latex_equations.tex
+++ b/results/latex_equations/C5_latex_equations.tex
@@ -23,9 +23,9 @@
 \end{figure}
 \end{center}
 first and last anchors, already given: $ a , k $
-$$ A =\min_{ e,f,g,h,i,j } \left( \colorbox{c4}{$B$}[e,a|i,f,j,g]+D[h,j,a,g]+\colorbox{c3}{$C_{\boxtimes}$}[e,f,h,i]\right) $$
-$$ \colorbox{c4}{$B$}' \left[e,a | i,f,j,g \right] =  \min\begin{cases}\colorbox{c4}{$B$}'[ e+1 , a|i,f,j,g ], &\text{if } e+1 \notin\{ a , i,f,j,g \} \\\end{cases}$$
-$$ \colorbox{c4}{$B$} \left[e,a | i,f,j,g \right] =  \min\begin{cases}\colorbox{c4}{$B$}[ e , a-1|i,f,j,g ], &\text{if } a-1 ,\notin\{ e , i,f,j,g \} \\\colorbox{c4}{$B$}'[ e+1 , a|i,f,j,g ], &\text{if } e+1 \notin\{ a , i,f,j,g \} \\\colorbox{c4}{$B$}[ e+1 , a-1|i,f,j,g ]+\Delta G(e,a) &\text{if } \{ e+1 , a-1 \}\cap \{ i,f,j,g \}=\emptyset,\\C[17,g,1,f,j,i]\end{cases}$$
+$$ A =\min_{ e,f,g,h,i,j } \left( \colorbox{c4}{$B$}[e,a|j,i,g,f]+D[h,a,g,j]+\colorbox{c3}{$C_{\boxtimes}$}[e,f,h,i]\right) $$
+$$ \colorbox{c4}{$B$}' \left[e,a | j,i,g,f \right] =  \min\begin{cases}\colorbox{c4}{$B$}'[ e+1 , a|j,i,g,f ], &\text{if } e+1 \notin\{ a , j,i,g,f \} \\\end{cases}$$
+$$ \colorbox{c4}{$B$} \left[e,a | j,i,g,f \right] =  \min\begin{cases}\colorbox{c4}{$B$}[ e , a-1|j,i,g,f ], &\text{if } a-1 ,\notin\{ e , j,i,g,f \} \\\colorbox{c4}{$B$}'[ e+1 , a|j,i,g,f ], &\text{if } e+1 \notin\{ a , j,i,g,f \} \\\colorbox{c4}{$B$}[ e+1 , a-1|j,i,g,f ]+\Delta G(e,a) &\text{if } \{ e+1 , a-1 \}\cap \{ j,i,g,f \}=\emptyset,\\C[1,g,i,f,17,j]\end{cases}$$
 $$ C\left[ b,d,f,g,i,j \right] =\min_{ c } \left( \colorbox{c1}{$C_{\boxtimes}$}[c,d,f,g]+\colorbox{c2}{$C_{\boxtimes}$}[b,c,i,j]\right) $$
 $$ D\left[ a,g,h,j \right] =\min_{  } \left( \colorbox{c0}{$C_{\boxtimes}$}[g,h,j,k]\right) $$
 \end{document}
