--- a/results/latex_equations/K4_latex_equations.tex
+++ b/results/latex_equations/K4_latex_equations.tex
@@ -23,7 +23,7 @@
 \end{figure}
 \end{center}
 first and last anchors, already given: $ a , i $
-$$ A =\min_{ b,c,e,f,g } \left( B[g,e,c,a]+\colorbox{c0}{$C_{\boxtimes}$}[a,b,e,f]+\colorbox{c2}{$C_{\boxtimes}$}[b,c,f,g]\right) $$
-$$ B\left[ a,c,e,g \right] =\min_{ d,h } \left( C[d,h,e,a]+\colorbox{c3}{$C_{\boxtimes}$}[c,d,g,h]\right) $$
+$$ A =\min_{ b,c,e,f,g } \left( B[c,g,a,e]+\colorbox{c0}{$C_{\boxtimes}$}[a,b,e,f]+\colorbox{c2}{$C_{\boxtimes}$}[b,c,f,g]\right) $$
+$$ B\left[ a,c,e,g \right] =\min_{ d,h } \left( C[h,d,a,e]+\colorbox{c3}{$C_{\boxtimes}$}[c,d,g,h]\right) $$
 $$ C\left[ a,d,e,h \right] =\min_{  } \left( \colorbox{c1}{$C_{\boxtimes}$}[d,e,h,i]\right) $$
 \end{document}
