--- a/results/latex_equations/K4_latex_equations.tex
+++ b/results/latex_equations/K4_latex_equations.tex
@@ -23,7 +23,7 @@
 \end{figure}
 \end{center}
 first and last anchors, already given: $ a , i $
-$$ A =\min_{ d,e,h } \left( B[d,a,h,e]+\colorbox{c1}{$C_{\boxtimes}$}[d,e,h,i]\right) $$
-$$ B\left[ a,d,e,h \right] =\min_{ c,g } \left( C[c,a,g,e]+\colorbox{c3}{$C_{\boxtimes}$}[c,d,g,h]\right) $$
+$$ A =\min_{ d,e,h } \left( B[d,h,a,e]+\colorbox{c1}{$C_{\boxtimes}$}[d,e,h,i]\right) $$
+$$ B\left[ a,d,e,h \right] =\min_{ c,g } \left( C[g,a,c,e]+\colorbox{c3}{$C_{\boxtimes}$}[c,d,g,h]\right) $$
 $$ C\left[ a,c,e,g \right] =\min_{ b,f } \left( \colorbox{c0}{$C_{\boxtimes}$}[a,b,e,f]+\colorbox{c2}{$C_{\boxtimes}$}[b,c,f,g]\right) $$
 \end{document}
