--- a/results/latex_equations/L_latex_equations.tex
+++ b/results/latex_equations/L_latex_equations.tex
@@ -23,6 +23,6 @@
 \end{figure}
 \end{center}
 first and last anchors, already given: $ a , g $
-$$ A =\min_{ c,d,f } \left( B[d,c,a,f]+\colorbox{c0}{$C_{\boxtimes}$}[c,d,f,g]\right) $$
+$$ A =\min_{ c,d,f } \left( B[d,a,c,f]+\colorbox{c0}{$C_{\boxtimes}$}[c,d,f,g]\right) $$
 $$ B\left[ a,c,d,f \right] =\min_{ b,e } \left( \colorbox{c2}{$C_{\boxtimes}$}[a,b,d,e]+\colorbox{c1}{$C_{\boxtimes}$}[b,c,e,f]\right) $$
 \end{document}
