--- a/results/colored_dbn/colored_dbn_K5.tex
+++ b/results/colored_dbn/colored_dbn_K5.tex
@@ -27,6 +27,17 @@
 \fill (32,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{i}}};
 \fill (36,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{j}}};
 \fill (40,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{k}}};
+\node at (0,-2.5) {(1)};
+\node at (4,-2.5) {(5)};
+\node at (8,-2.5) {(9)};
+\node at (12,-2.5) {(13)};
+\node at (16,-2.5) {(17)};
+\node at (20,-2.5) {(21)};
+\node at (24,-2.5) {(25)};
+\node at (28,-2.5) {(29)};
+\node at (32,-2.5) {(33)};
+\node at (36,-2.5) {(37)};
+\node at (40,-2.5) {(41)};
 \draw[thick] (0,0) -- (1,0);
 \draw[thick] (1,0) -- (2,0);
 \draw[thick] (2,0) -- (3,0);
