--- a/results/colored_dbn/colored_dbn_L.tex
+++ b/results/colored_dbn/colored_dbn_L.tex
@@ -23,6 +23,13 @@
 \fill (16,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{e}}};
 \fill (20,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{f}}};
 \fill (24,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{g}}};
+\node at (0,-2.5) {(1)};
+\node at (4,-2.5) {(5)};
+\node at (8,-2.5) {(9)};
+\node at (12,-2.5) {(13)};
+\node at (16,-2.5) {(17)};
+\node at (20,-2.5) {(21)};
+\node at (24,-2.5) {(25)};
 \draw[thick] (0,0) -- (1,0);
 \draw[thick] (1,0) -- (2,0);
 \draw[thick] (2,0) -- (3,0);
