--- a/results/latex_equations/K5_latex_equations.tex
+++ b/results/latex_equations/K5_latex_equations.tex
@@ -23,8 +23,8 @@
 \end{figure}
 \end{center}
 first and last anchors, already given: $ a , k $
-$$ A =\min_{ e,f,j } \left( B[a,e,j,f]+\colorbox{c2}{$C_{\boxtimes}$}[e,f,j,k]\right) $$
-$$ B\left[ a,e,f,j \right] =\min_{ d,i } \left( C[a,d,i,f]+\colorbox{c3}{$C_{\boxtimes}$}[d,e,i,j]\right) $$
-$$ C\left[ a,d,f,i \right] =\min_{ b,g } \left( \colorbox{c4}{$C_{\boxtimes}$}[a,b,f,g]+D[d,g,i,b]\right) $$
+$$ A =\min_{ e,f,j } \left( B[a,f,j,e]+\colorbox{c2}{$C_{\boxtimes}$}[e,f,j,k]\right) $$
+$$ B\left[ a,e,f,j \right] =\min_{ d,i } \left( C[d,a,f,i]+\colorbox{c3}{$C_{\boxtimes}$}[d,e,i,j]\right) $$
+$$ C\left[ a,d,f,i \right] =\min_{ b,g } \left( \colorbox{c4}{$C_{\boxtimes}$}[a,b,f,g]+D[d,b,g,i]\right) $$
 $$ D\left[ b,d,g,i \right] =\min_{ c,h } \left( \colorbox{c0}{$C_{\boxtimes}$}[b,c,g,h]+\colorbox{c1}{$C_{\boxtimes}$}[c,d,h,i]\right) $$
 \end{document}
