--- a/results/colored_dbn/colored_dbn_H2.tex
+++ b/results/colored_dbn/colored_dbn_H2.tex
@@ -18,14 +18,20 @@
 \begin{tikzpicture}
 \fill (0,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{a}}};
 \fill (4,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{b}}};
-\fill (8,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{c}}};
-\fill (12,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{d}}};
-\fill (16,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{e}}};
+\fill (5,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{c}}};
+\fill (9,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{d}}};
+\fill (10,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{e}}};
+\fill (14,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{f}}};
+\fill (15,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{g}}};
+\fill (19,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{h}}};
 \node at (0,-2.5) {(1)};
 \node at (4,-2.5) {(5)};
-\node at (8,-2.5) {(9)};
-\node at (12,-2.5) {(13)};
-\node at (16,-2.5) {(17)};
+\node at (5,-2.5) {(6)};
+\node at (9,-2.5) {(10)};
+\node at (10,-2.5) {(11)};
+\node at (14,-2.5) {(15)};
+\node at (15,-2.5) {(16)};
+\node at (19,-2.5) {(20)};
 \draw[thick] (0,0) -- (1,0);
 \draw[thick] (1,0) -- (2,0);
 \draw[thick] (2,0) -- (3,0);
@@ -41,20 +47,23 @@
 \draw[thick] (12,0) -- (13,0);
 \draw[thick] (13,0) -- (14,0);
 \draw[thick] (14,0) -- (15,0);
-\draw[very thick] (8,0) arc                 (0:180:2.0);
-\draw[very thick] (13,0) arc                 (0:180:3.0);
-\draw[very thick] (12,0) arc                 (0:180:2.0);
-\draw[very thick] (16,0) arc                 (0:180:8.0);
-\draw[very thick] (15,0) arc                 (0:180:5.0);
-\draw[very thick] (14,0) arc                 (0:180:4.0);
-\draw[very thick] (10,0) arc                 (0:180:4.0);
-\draw[very thick] (9,0) arc                 (0:180:3.0);
-\draw[very thick] (16,0) arc                 (0:180:6.0);
-\draw[very thick] (12,0) arc                 (0:180:6.0);
-\draw[very thick] (11,0) arc                 (0:180:5.0);
-\filldraw[fill=c0,rounded corners]  (3.8,-0.5) rectangle (8.2,+0.5);
-\filldraw[fill=c0,rounded corners]  (11.8,-0.5) rectangle (16.2,+0.5);
+\draw[thick] (15,0) -- (16,0);
+\draw[thick] (16,0) -- (17,0);
+\draw[thick] (17,0) -- (18,0);
+\draw[very thick] (11,0) arc                 (0:180:4.0);
+\draw[very thick] (12,0) arc                 (0:180:5.0);
+\draw[very thick] (17,0) arc                 (0:180:5.0);
+\draw[very thick] (16,0) arc                 (0:180:4.0);
+\draw[very thick] (13,0) arc                 (0:180:6.0);
+\draw[very thick] (14,0) arc                 (0:180:7.0);
+\draw[very thick] (19,0) arc                 (0:180:7.0);
+\draw[very thick] (18,0) arc                 (0:180:6.0);
+\draw[very thick] (19,0) arc                 (0:180:9.5);
+\draw[very thick] (10,0) arc                 (0:180:3.0);
+\draw[very thick] (15,0) arc                 (0:180:3.0);
+\filldraw[fill=c0,rounded corners]  (4.8,-0.5) rectangle (9.2,+0.5);
+\filldraw[fill=c0,rounded corners]  (14.8,-0.5) rectangle (19.2,+0.5);
 \filldraw[fill=c1,rounded corners]  (-0.2,-0.5) rectangle (4.2,+0.5);
-\filldraw[fill=c1,rounded corners]  (7.8,-0.5) rectangle (12.2,+0.5);
+\filldraw[fill=c1,rounded corners]  (9.8,-0.5) rectangle (14.2,+0.5);
 \end{tikzpicture}
 \end{document}
