--- a/results/colored_dbn/colored_dbn_K5.tex
+++ b/results/colored_dbn/colored_dbn_K5.tex
@@ -18,26 +18,44 @@
 \begin{tikzpicture}
 \fill (0,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{a}}};
 \fill (4,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{b}}};
-\fill (8,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{c}}};
-\fill (12,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{d}}};
-\fill (16,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{e}}};
-\fill (20,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{f}}};
-\fill (24,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{g}}};
-\fill (28,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{h}}};
-\fill (32,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{i}}};
-\fill (36,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{j}}};
-\fill (40,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{k}}};
+\fill (5,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{c}}};
+\fill (9,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{d}}};
+\fill (10,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{e}}};
+\fill (14,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{f}}};
+\fill (15,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{g}}};
+\fill (19,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{h}}};
+\fill (20,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{i}}};
+\fill (24,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{j}}};
+\fill (25,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{k}}};
+\fill (29,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{l}}};
+\fill (30,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{m}}};
+\fill (34,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{n}}};
+\fill (35,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{o}}};
+\fill (39,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{p}}};
+\fill (40,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{q}}};
+\fill (44,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{r}}};
+\fill (45,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{s}}};
+\fill (49,0) circle (0.) node[below=1cm] {\relsize{+5}{\textbf{t}}};
 \node at (0,-2.5) {(1)};
 \node at (4,-2.5) {(5)};
-\node at (8,-2.5) {(9)};
-\node at (12,-2.5) {(13)};
-\node at (16,-2.5) {(17)};
+\node at (5,-2.5) {(6)};
+\node at (9,-2.5) {(10)};
+\node at (10,-2.5) {(11)};
+\node at (14,-2.5) {(15)};
+\node at (15,-2.5) {(16)};
+\node at (19,-2.5) {(20)};
 \node at (20,-2.5) {(21)};
 \node at (24,-2.5) {(25)};
-\node at (28,-2.5) {(29)};
-\node at (32,-2.5) {(33)};
-\node at (36,-2.5) {(37)};
+\node at (25,-2.5) {(26)};
+\node at (29,-2.5) {(30)};
+\node at (30,-2.5) {(31)};
+\node at (34,-2.5) {(35)};
+\node at (35,-2.5) {(36)};
+\node at (39,-2.5) {(40)};
 \node at (40,-2.5) {(41)};
+\node at (44,-2.5) {(45)};
+\node at (45,-2.5) {(46)};
+\node at (49,-2.5) {(50)};
 \draw[thick] (0,0) -- (1,0);
 \draw[thick] (1,0) -- (2,0);
 \draw[thick] (2,0) -- (3,0);
@@ -77,41 +95,50 @@
 \draw[thick] (36,0) -- (37,0);
 \draw[thick] (37,0) -- (38,0);
 \draw[thick] (38,0) -- (39,0);
-\draw[very thick] (37,0) arc                 (0:180:9.0);
-\draw[very thick] (36,0) arc                 (0:180:8.0);
-\draw[very thick] (32,0) arc                 (0:180:8.0);
-\draw[very thick] (38,0) arc                 (0:180:10.0);
-\draw[very thick] (28,0) arc                 (0:180:8.0);
-\draw[very thick] (34,0) arc                 (0:180:10.0);
-\draw[very thick] (33,0) arc                 (0:180:9.0);
-\draw[very thick] (39,0) arc                 (0:180:11.0);
-\draw[very thick] (29,0) arc                 (0:180:9.0);
-\draw[very thick] (20,0) arc                 (0:180:8.0);
-\draw[very thick] (35,0) arc                 (0:180:11.0);
-\draw[very thick] (25,0) arc                 (0:180:9.0);
-\draw[very thick] (24,0) arc                 (0:180:8.0);
-\draw[very thick] (31,0) arc                 (0:180:11.0);
-\draw[very thick] (30,0) arc                 (0:180:10.0);
-\draw[very thick] (40,0) arc                 (0:180:12.0);
-\draw[very thick] (36,0) arc                 (0:180:12.0);
-\draw[very thick] (27,0) arc                 (0:180:11.0);
-\draw[very thick] (26,0) arc                 (0:180:10.0);
-\draw[very thick] (40,0) arc                 (0:180:20.0);
-\draw[very thick] (22,0) arc                 (0:180:10.0);
-\draw[very thick] (21,0) arc                 (0:180:9.0);
-\draw[very thick] (28,0) arc                 (0:180:12.0);
-\draw[very thick] (32,0) arc                 (0:180:12.0);
-\draw[very thick] (24,0) arc                 (0:180:12.0);
-\draw[very thick] (23,0) arc                 (0:180:11.0);
-\filldraw[fill=c0,rounded corners]  (3.8,-0.5) rectangle (8.2,+0.5);
-\filldraw[fill=c0,rounded corners]  (23.8,-0.5) rectangle (28.2,+0.5);
-\filldraw[fill=c1,rounded corners]  (7.8,-0.5) rectangle (12.2,+0.5);
-\filldraw[fill=c1,rounded corners]  (27.8,-0.5) rectangle (32.2,+0.5);
-\filldraw[fill=c2,rounded corners]  (15.8,-0.5) rectangle (20.2,+0.5);
-\filldraw[fill=c2,rounded corners]  (35.8,-0.5) rectangle (40.2,+0.5);
-\filldraw[fill=c3,rounded corners]  (11.8,-0.5) rectangle (16.2,+0.5);
-\filldraw[fill=c3,rounded corners]  (31.8,-0.5) rectangle (36.2,+0.5);
-\filldraw[fill=c4,rounded corners]  (-0.2,-0.5) rectangle (4.2,+0.5);
-\filldraw[fill=c4,rounded corners]  (19.8,-0.5) rectangle (24.2,+0.5);
+\draw[thick] (39,0) -- (40,0);
+\draw[thick] (40,0) -- (41,0);
+\draw[thick] (41,0) -- (42,0);
+\draw[thick] (42,0) -- (43,0);
+\draw[thick] (43,0) -- (44,0);
+\draw[thick] (44,0) -- (45,0);
+\draw[thick] (45,0) -- (46,0);
+\draw[thick] (46,0) -- (47,0);
+\draw[thick] (47,0) -- (48,0);
+\draw[very thick] (35,0) arc                 (0:180:10.5);
+\draw[very thick] (27,0) arc                 (0:180:12.5);
+\draw[very thick] (26,0) arc                 (0:180:11.5);
+\draw[very thick] (40,0) arc                 (0:180:10.5);
+\draw[very thick] (36,0) arc                 (0:180:11.5);
+\draw[very thick] (32,0) arc                 (0:180:12.5);
+\draw[very thick] (31,0) arc                 (0:180:11.5);
+\draw[very thick] (41,0) arc                 (0:180:11.5);
+\draw[very thick] (29,0) arc                 (0:180:14.5);
+\draw[very thick] (28,0) arc                 (0:180:13.5);
+\draw[very thick] (37,0) arc                 (0:180:12.5);
+\draw[very thick] (46,0) arc                 (0:180:11.5);
+\draw[very thick] (34,0) arc                 (0:180:14.5);
+\draw[very thick] (45,0) arc                 (0:180:10.5);
+\draw[very thick] (33,0) arc                 (0:180:13.5);
+\draw[very thick] (42,0) arc                 (0:180:12.5);
+\draw[very thick] (38,0) arc                 (0:180:13.5);
+\draw[very thick] (48,0) arc                 (0:180:13.5);
+\draw[very thick] (47,0) arc                 (0:180:12.5);
+\draw[very thick] (43,0) arc                 (0:180:13.5);
+\draw[very thick] (39,0) arc                 (0:180:14.5);
+\draw[very thick] (44,0) arc                 (0:180:14.5);
+\draw[very thick] (49,0) arc                 (0:180:24.5);
+\draw[very thick] (25,0) arc                 (0:180:10.5);
+\draw[very thick] (49,0) arc                 (0:180:14.5);
+\draw[very thick] (30,0) arc                 (0:180:10.5);
+\filldraw[fill=c0,rounded corners]  (4.8,-0.5) rectangle (9.2,+0.5);
+\filldraw[fill=c0,rounded corners]  (29.8,-0.5) rectangle (34.2,+0.5);
+\filldraw[fill=c1,rounded corners]  (-0.2,-0.5) rectangle (4.2,+0.5);
+\filldraw[fill=c1,rounded corners]  (24.8,-0.5) rectangle (29.2,+0.5);
+\filldraw[fill=c2,rounded corners]  (14.8,-0.5) rectangle (19.2,+0.5);
+\filldraw[fill=c2,rounded corners]  (39.8,-0.5) rectangle (44.2,+0.5);
+\filldraw[fill=c3,rounded corners]  (19.8,-0.5) rectangle (24.2,+0.5);
+\filldraw[fill=c3,rounded corners]  (44.8,-0.5) rectangle (49.2,+0.5);
+\filldraw[fill=c4,rounded corners]  (9.8,-0.5) rectangle (14.2,+0.5);
+\filldraw[fill=c4,rounded corners]  (34.8,-0.5) rectangle (39.2,+0.5);
 \end{tikzpicture}
 \end{document}
