--- a/results/latex_equations/K5_latex_equations.tex
+++ b/results/latex_equations/K5_latex_equations.tex
@@ -22,9 +22,18 @@
 \includegraphics[width=\textwidth]{results/colored_dbn/colored_dbn_K5.pdf}
 \end{figure}
 \end{center}
-first and last anchors, already given: $ a , k $
-$$ A =\min_{ e,f,j } \left( B[a,f,j,e]+\colorbox{c2}{$C_{\boxtimes}$}[e,f,j,k]\right) $$
-$$ B\left[ a,e,f,j \right] =\min_{ d,i } \left( C[d,a,f,i]+\colorbox{c3}{$C_{\boxtimes}$}[d,e,i,j]\right) $$
-$$ C\left[ a,d,f,i \right] =\min_{ b,g } \left( \colorbox{c4}{$C_{\boxtimes}$}[a,b,f,g]+D[d,b,g,i]\right) $$
-$$ D\left[ b,d,g,i \right] =\min_{ c,h } \left( \colorbox{c0}{$C_{\boxtimes}$}[b,c,g,h]+\colorbox{c1}{$C_{\boxtimes}$}[c,d,h,i]\right) $$
+first and last anchors, already given: $ a , t $
+$$ A =\min_{ i,j,r } \left( B[r,j,a,i]+K[t,r,j,i]\right) $$
+$$ B\left[ a,i,j,r \right] =\min_{ h } \left( C[h,r,j,a]\right) $$
+$$ C\left[ a,h,j,r \right] =\min_{ g,q } \left( D[q,j,g,a]+\colorbox{c2}{$C_{\boxtimes}$}[g,h,q,r]\right) $$
+$$ D\left[ a,g,j,q \right] =\min_{ c,l } \left( E[c,g,q,l]+\colorbox{c1}{$J$}[a,l\mid c,j]\right) $$
+$$ E\left[ c,g,l,q \right] =\min_{ d,n } \left( F[c,n,d,l]+G[n,d,g,q]\right) $$
+$$ F\left[ c,d,l,n \right] =\min_{ m } \left( \colorbox{c0}{$C_{\boxtimes}$}[c,d,m,n]\right) $$
+$$ G\left[ d,g,n,q \right] =\min_{ p } \left( H[n,d,g,p]\right) $$
+$$ H\left[ d,g,n,p \right] =\min_{ e } \left( \colorbox{c4}{$I$}[p,e\mid n,g]\right) $$
+$$ \colorbox{c4}{$I$}' \left[p,e \mid  n,g \right] =  \min\begin{cases}\colorbox{c4}{$I$}'[ p , e-1\mid n,g ], &\text{if } e-1 ,\notin\{ p , n,g \} \\\colorbox{c4}{$I$}[ p+1 , e-1\mid n,g ]+\Delta G(p,e) &\text{if } \{ p+1 , e-1 \}\cap \{ n,g \}=\emptyset\end{cases}$$
+$$ \colorbox{c4}{$I$} \left[p,e \mid  n,g \right] =  \min\begin{cases}\colorbox{c4}{$I$}[ p+1 , e\mid n,g ], &\text{if } p+1 \notin\{ e , n,g \} \\\colorbox{c4}{$I$}'[ p , e-1\mid n,g ], &\text{if } e-1 ,\notin\{ p , n,g \} \\\colorbox{c4}{$I$}[ p+1 , e-1\mid n,g ]+\Delta G(p,e) &\text{if } \{ p+1 , e-1 \}\cap \{ n,g \}=\emptyset\end{cases}$$
+$$ \colorbox{c1}{$J$}' \left[a,l \mid  c,j \right] =  \min\begin{cases}\colorbox{c1}{$J$}'[ a , l-1\mid c,j ], &\text{if } l-1 ,\notin\{ a , c,j \} \\\colorbox{c1}{$J$}[ a+1 , l-1\mid c,j ]+\Delta G(a,l) &\text{if } \{ a+1 , l-1 \}\cap \{ c,j \}=\emptyset\end{cases}$$
+$$ \colorbox{c1}{$J$} \left[a,l \mid  c,j \right] =  \min\begin{cases}\colorbox{c1}{$J$}[ a+1 , l\mid c,j ], &\text{if } a+1 \notin\{ l , c,j \} \\\colorbox{c1}{$J$}'[ a , l-1\mid c,j ], &\text{if } l-1 ,\notin\{ a , c,j \} \\\colorbox{c1}{$J$}[ a+1 , l-1\mid c,j ]+\Delta G(a,l) &\text{if } \{ a+1 , l-1 \}\cap \{ c,j \}=\emptyset\end{cases}$$
+$$ K\left[ i,j,r,t \right] =\min_{ s } \left( \colorbox{c3}{$C_{\boxtimes}$}[i,j,s,t]\right) $$
 \end{document}
