--- a/results/latex_equations/K_latex_equations.tex
+++ b/results/latex_equations/K_latex_equations.tex
@@ -22,10 +22,13 @@
 \includegraphics[width=\textwidth]{results/colored_dbn/colored_dbn_K.pdf}
 \end{figure}
 \end{center}
-first and last anchors, already given: $ a , g $
-$$ A =\min_{ d } \left( \colorbox{c0}{$B$}[g,d\mid d,a]\right) $$
-$$ \colorbox{c0}{$B$}' \left[g,d \mid  d',a \right] =  \min\begin{cases}\colorbox{c0}{$B$}'[ g , d-1\mid d',a ], &\text{if } d-1 ,\notin\{ g , d',a \} \\\colorbox{c0}{$B$}[ g+1 , d-1\mid d',a ]+\Delta G(g,d) &\text{if } \{ g+1 , d-1 \}\cap \{ d',a \}=\emptyset\end{cases}$$
-$$ \colorbox{c0}{$B$} \left[g,d \mid  d',a \right] =  \min\begin{cases}\colorbox{c0}{$B$}[ g+1 , d\mid d',a ], &\text{if } g+1 \notin\{ d , d',a \} \\\colorbox{c0}{$B$}'[ g , d-1\mid d',a ], &\text{if } d-1 ,\notin\{ g , d',a \} \\\colorbox{c0}{$B$}[ g+1 , d-1\mid d',a ]+\Delta G(g,d) &\text{if } \{ g+1 , d-1 \}\cap \{ d',a \}=\emptyset,\\\colorbox{c1}{$C$}[d',a\mid g,d]\end{cases}$$
-$$ \colorbox{c1}{$C$}' \left[d,a \mid  f,e \right] =  \min\begin{cases}\colorbox{c1}{$C$}'[ d+1 , a\mid f,e ], &\text{if } d+1 \notin\{ a , f,e \} \\\end{cases}$$
-$$ \colorbox{c1}{$C$} \left[d,a \mid  f,e \right] =  \min\begin{cases}\colorbox{c1}{$C$}[ d , a-1\mid f,e ], &\text{if } a-1 ,\notin\{ d , f,e \} \\\colorbox{c1}{$C$}'[ d+1 , a\mid f,e ], &\text{if } d+1 \notin\{ a , f,e \} \\\colorbox{c1}{$C$}[ d+1 , a-1\mid f,e ]+\Delta G(d,a) &\text{if } \{ d+1 , a-1 \}\cap \{ f,e \}=\emptyset,\\\colorbox{c2}{$C_{\boxtimes}$}[a,d,e,f]\end{cases}$$
+first and last anchors, already given: $ a , l $
+$$ A =\min_{ f,h,k } \left( B[a,f,k,h]+G[f,k,h,l]\right) $$
+$$ B\left[ a,f,h,k \right] =\min_{ i } \left( C[a,f,i,k]\right) $$
+$$ C\left[ a,f,i,k \right] =\min_{ j } \left( \colorbox{c2}{$D$}[a,f\mid i,j]\right) $$
+$$ \colorbox{c2}{$D$}' \left[a,f \mid  i,j \right] =  \min\begin{cases}\colorbox{c2}{$D$}'[ a , f-1\mid i,j ], &\text{if } f-1 ,\notin\{ a , i,j \} \\\colorbox{c2}{$D$}[ a+1 , f-1\mid i,j ]+\Delta G(a,f) &\text{if } \{ a+1 , f-1 \}\cap \{ i,j \}=\emptyset\end{cases}$$
+$$ \colorbox{c2}{$D$} \left[a,f \mid  i,j \right] =  \min\begin{cases}\colorbox{c2}{$D$}[ a+1 , f\mid i,j ], &\text{if } a+1 \notin\{ f , i,j \} \\\colorbox{c2}{$D$}'[ a , f-1\mid i,j ], &\text{if } f-1 ,\notin\{ a , i,j \} \\\colorbox{c2}{$D$}[ a+1 , f-1\mid i,j ]+\Delta G(a,f) &\text{if } \{ a+1 , f-1 \}\cap \{ i,j \}=\emptyset,\\E[f,a,i,j]\end{cases}$$
+$$ E\left[ b,e,i,j \right] =\min_{ c } \left( F[e,c,i,j]\right) $$
+$$ F\left[ c,e,i,j \right] =\min_{ d } \left( \colorbox{c0}{$C_{\boxtimes}$}[c,d,i,j]\right) $$
+$$ G\left[ f,h,k,l \right] =\min_{ g } \left( \colorbox{c1}{$C_{\boxtimes}$}[g,h,k,l]\right) $$
 \end{document}
